Initial version of Todo app

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
         <title>AtokanToDo</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="root"></div>
     </body>
 </html>
