Add styling to the app

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>AtokanToDo</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="/public/index.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="container"></div>
   </body>
 </html>
